Changes The Alliance text colour to light blue

--- a/ConwyCastleSiege/src/main/resources/maps.yml
+++ b/ConwyCastleSiege/src/main/resources/maps.yml
@@ -291,7 +291,7 @@ Elwynn:
   teams:
     Defenders:
       name: "The Alliance"
-      primary_color: "dark_blue"
+      primary_color: "blue"
       secondary_color: "light_gold"
       lobby:
         spawn_point:
